@@ -9,9 +9,9 @@ import com.nimz.midpointfinder.model.Location;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -27,26 +27,33 @@ public class OpenRouteGeocodingService implements GeocodingService{
     public List<Double> geocode(String location) throws JsonProcessingException {
         ObjectMapper mapper = new ObjectMapper();
 
-        String openRouteGeocodingSearchStructuredURL = String.format(
-                "https://api.openrouteservice.org/geocode/search/structured?api_key=%s&address=%s",
-                appConfig.getOrsApiKey(),
-                location
-        );
+        String openRouteGeocodingSearchURL = UriComponentsBuilder
+                .fromHttpUrl("https://api.openrouteservice.org/geocode/search")
+                .queryParam("api_key", appConfig.getOrsApiKey())
+                .queryParam("text", location)
+                .build()
+                .encode()
+                .toUriString();
 
-        ResponseEntity<String> response = restTemplate.getForEntity(openRouteGeocodingSearchStructuredURL, String.class);
+        ResponseEntity<String> response = restTemplate.getForEntity(openRouteGeocodingSearchURL, String.class);
 
         JsonNode root = mapper.readTree(response.getBody());
-        JsonNode coordinatesNode = root.path("features")
-                                        .get(0)
-                                        .path("geometry")
-                                        .path("coordinates");
+        JsonNode featuresNode = root.path("features");
 
-        if(coordinatesNode.isArray()) {
-            return Arrays.asList(coordinatesNode.get(0).asDouble(), coordinatesNode.get(1).asDouble());
+        if (featuresNode.isArray() && featuresNode.size() > 0) {
+            JsonNode coordinatesNode = featuresNode
+                    .get(0)
+                    .path("geometry")
+                    .path("coordinates");
+
+            if (coordinatesNode.isArray() && coordinatesNode.size() >= 2) {
+                double longitude = coordinatesNode.get(0).asDouble();
+                double latitude = coordinatesNode.get(1).asDouble();
+                return List.of(latitude, longitude);
+            }
         }
-        System.out.println(coordinatesNode);
-//        return null;
-        return null;
+
+        return List.of();
     }
 
     @Override
